Change implementation of Base64 encoder/decoder